--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build Executables
+name: Build StudentQr Executable
 
 on:
-  workflow_dispatch:  # Run manually from GitHub
+  workflow_dispatch:  # Allow manual trigger
   push:
-    branches: [main]  # Or run when you push to main branch
+    branches: [main]  # Auto-build on push to main
 
 jobs:
   build:
@@ -25,21 +25,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install nuitka
-          pip install -r requirements.txt || echo "No requirements.txt found"
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Build executable
         run: |
           if [[ "$RUNNER_OS" == "Windows" ]]; then
-            nuitka --standalone --onefile --windows-icon-from-ico=icon.ico --output-filename=MyApp.exe your_script.py
+            nuitka --standalone --onefile --windows-icon-from-ico=icon.ico --output-filename=StudentQr.exe main.py
           elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            nuitka --standalone --onefile --macos-app-icon=icon.icns --output-filename=MyApp.app your_script.py
+            nuitka --standalone --onefile --macos-app-icon=icon.icns --output-filename=StudentQr.app main.py
           else
-            nuitka --standalone --onefile --output-filename=MyApp.bin your_script.py
+            nuitka --standalone --onefile --output-filename=StudentQr.bin main.py
           fi
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}-MyApp
+          name: ${{ matrix.os }}-StudentQr
           path: |
-            MyApp.*
+            StudentQr.*
