--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
-name: Build StudentQr Executable
+name: Build Executable
 
 on:
-  workflow_dispatch:  # Allow manual trigger
   push:
-    branches: [main]  # Auto-build on push to main
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,32 +15,28 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install nuitka
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install nuitka
+
+        shell: bash
 
       - name: Build executable
         run: |
-          if [[ "$RUNNER_OS" == "Windows" ]]; then
-            nuitka --standalone --onefile --windows-icon-from-ico=icon.ico --output-filename=StudentQr.exe main.py
-          elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            nuitka --standalone --onefile --macos-app-icon=icon.icns --output-filename=StudentQr.app main.py
-          else
-            nuitka --standalone --onefile --output-filename=StudentQr.bin main.py
-          fi
+          python -m nuitka --onefile --standalone --enable-plugin=tk-inter --output-filename=StudentQr main.py
+        shell: bash
 
-      - name: Upload executable
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.os }}-StudentQr
-          path: |
-            StudentQr.*
+          name: StudentQr-${{ matrix.os }}
+          path: StudentQr*
