--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Executable
+name: Build StudentQr Executable
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -15,28 +16,24 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install nuitka
 
-        shell: bash
-
-      - name: Build executable
+      - name: Build executable with Nuitka
         run: |
-          python -m nuitka --onefile --standalone --enable-plugin=tk-inter --output-filename=StudentQr main.py
-        shell: bash
+          python -m nuitka --standalone --onefile --enable-plugin=tk-inter --output-filename=StudentQr main.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
         with:
           name: StudentQr-${{ matrix.os }}
           path: StudentQr*
