--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,48 +2,50 @@ name: Build with Nuitka
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.11"]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
+
+      # Install build tools on Windows
+      - name: Install MSVC Build Tools
+        if: runner.os == 'Windows'
+        run: |
+          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --passive --locale en-US" --yes
+          refreshenv
 
       - name: Install dependencies
-        shell: bash
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
+          pip install -r requirements.txt
           pip install nuitka
 
-      - name: Build executable with Nuitka
-        shell: bash
+      - name: Build executable
         run: |
-          python -m nuitka \
-            --standalone \
-            --onefile \
-            --enable-plugin=tk-inter \
-            --output-dir=build \
-            main.py
+          nuitka --onefile --standalone --enable-plugin=tk-inter main.py
 
-      - name: Upload build artifacts
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-${{ matrix.os }}
-          path: build
+          name: executable-${{ matrix.os }}
+          path: |
+            studentQr.exe
+            studentQr.bin
+            main.dist/
+            studentQr.app/
