--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build with Nuitka
+name: Build StudentQR Executables
 
 on:
   push:
@@ -11,41 +11,56 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.11"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-
-      # Install build tools on Windows
-      - name: Install MSVC Build Tools
-        if: runner.os == 'Windows'
-        run: |
-          choco install visualstudio2022buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --passive --locale en-US" --yes
-          refreshenv
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
           pip install nuitka
 
-      - name: Build executable
+      - name: Build for each OS
         run: |
-          nuitka --onefile --standalone --enable-plugin=tk-inter main.py
+          if [[ "$RUNNER_OS" == "Linux" ]]; then
+            python -m nuitka --standalone --onefile --output-filename=studentQr main.py
+            mkdir -p dist/linux
+            mv studentQr dist/linux/
+          elif [[ "$RUNNER_OS" == "Windows" ]]; then
+            python -m nuitka --standalone --onefile --windows-disable-console --output-filename=studentQr.exe main.py
+            mkdir dist\windows
+            move studentQr.exe dist\windows\
+          elif [[ "$RUNNER_OS" == "macOS" ]]; then
+            python -m nuitka --standalone --onefile --output-filename=studentQr main.py
+            mkdir -p dist/macos
+            mv studentQr dist/macos/
+          fi
+        shell: bash
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Linux build
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v3
         with:
-          name: executable-${{ matrix.os }}
-          path: |
-            studentQr.exe
-            studentQr.bin
-            main.dist/
-            studentQr.app/
+          name: studentQr-linux
+          path: dist/linux
+
+      - name: Upload Windows build
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: studentQr-windows
+          path: dist/windows
+
+      - name: Upload macOS build
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: studentQr-macos
+          path: dist/macos
