--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,66 +1,62 @@
-name: Build StudentQR Executables
+name: Build Executables
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install nuitka
 
-      - name: Build for each OS
+      - name: Build executable
         run: |
-          if [[ "$RUNNER_OS" == "Linux" ]]; then
-            python -m nuitka --standalone --onefile --output-filename=studentQr main.py
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
             mkdir -p dist/linux
-            mv studentQr dist/linux/
-          elif [[ "$RUNNER_OS" == "Windows" ]]; then
-            python -m nuitka --standalone --onefile --windows-disable-console --output-filename=studentQr.exe main.py
-            mkdir dist\windows
-            move studentQr.exe dist\windows\
-          elif [[ "$RUNNER_OS" == "macOS" ]]; then
-            python -m nuitka --standalone --onefile --output-filename=studentQr main.py
+            python -m nuitka --standalone --onefile --output-filename=dist/linux/studentQr main.py
+          elif [ "${{ matrix.os }}" = "macos-latest" ]; then
             mkdir -p dist/macos
-            mv studentQr dist/macos/
+            python -m nuitka --standalone --onefile --output-filename=dist/macos/studentQr main.py
+          else
+            mkdir -p dist/windows
+            python -m nuitka --standalone --onefile --output-filename=dist/windows/studentQr.exe main.py
           fi
         shell: bash
 
-      - name: Upload Linux build
+      - name: Upload Linux artifact
         if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: studentQr-linux
-          path: dist/linux
+          path: dist/linux/
 
-      - name: Upload Windows build
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v3
-        with:
-          name: studentQr-windows
-          path: dist/windows
-
-      - name: Upload macOS build
+      - name: Upload macOS artifact
         if: matrix.os == 'macos-latest'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: studentQr-macos
-          path: dist/macos
+          path: dist/macos/
+
+      - name: Upload Windows artifact
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: studentQr-windows
+          path: dist/windows/
