--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Executables
+name: Build Executables for All OS
 
 on:
   push:
@@ -6,57 +6,86 @@ on:
       - main
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install nuitka
+          pip install -r requirements.txt
+          pip install pyinstaller
 
-      - name: Build executable
+      - name: Build for Linux
         run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            mkdir -p dist/linux
-            python -m nuitka --standalone --onefile --output-filename=dist/linux/studentQr main.py
-          elif [ "${{ matrix.os }}" = "macos-latest" ]; then
-            mkdir -p dist/macos
-            python -m nuitka --standalone --onefile --output-filename=dist/macos/studentQr main.py
-          else
-            mkdir -p dist/windows
-            python -m nuitka --standalone --onefile --output-filename=dist/windows/studentQr.exe main.py
-          fi
-        shell: bash
+          pyinstaller --onefile --name myapp main.py
+          mkdir -p dist/linux
+          mv dist/myapp dist/linux/
 
       - name: Upload Linux artifact
-        if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: studentQr-linux
+          name: myapp-linux
           path: dist/linux/
 
-      - name: Upload macOS artifact
-        if: matrix.os == 'macos-latest'
-        uses: actions/upload-artifact@v4
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: studentQr-macos
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Build for macOS
+        run: |
+          pyinstaller --onefile --name myapp main.py
+          mkdir -p dist/macos
+          mv dist/myapp dist/macos/
+
+      - name: Upload macOS artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: myapp-macos
           path: dist/macos/
 
-      - name: Upload Windows artifact
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v4
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: studentQr-windows
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pyinstaller
+
+      - name: Build for Windows
+        run: |
+          pyinstaller --onefile --name myapp main.py
+          mkdir dist\\windows
+          move dist\\myapp.exe dist\\windows\\
+
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: myapp-windows
           path: dist/windows/
