--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-   build-linux:
-    runs-on: ubuntu-20.04
+  build-linux:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -17,15 +17,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libssl-dev libffi-dev \
-              python3-dev zlib1g-dev libstdc++6
-
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
@@ -53,8 +46,7 @@ jobs:
           name: myapp-linux
           path: dist/linux/
 
-
-   build-macos:
+  build-macos:
     runs-on: macos-latest
     steps:
       - name: Checkout repository
@@ -94,7 +86,7 @@ jobs:
           name: myapp-macos
           path: dist/macos/
 
-   build-windows:
+  build-windows:
     runs-on: windows-latest
     steps:
       - name: Checkout repository
