--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,39 +12,33 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
+      - name: Build with manylinux2014
         run: |
-          pip install -r requirements.txt
-          pip install pyinstaller
-
-      - name: Create .env file
-        run: |
-          echo "API_KEY=${{ secrets.API_KEY }}" >> .env
-          echo "API_SECRET=${{ secrets.API_SECRET }}" >> .env
-          echo "CLOUD_NAME=${{ secrets.CLOUD_NAME }}" >> .env
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "EMAIL_ADDRESS=${{ secrets.EMAIL_ADDRESS }}" >> .env
-          echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
-
-      - name: Build for Linux
-        run: |
-          pyinstaller --onefile --name myapp --add-data ".env:.env" main.py
-          mkdir -p dist/linux
-          mv dist/myapp dist/linux/
+          docker run --rm -v ${{ github.workspace }}:/app quay.io/pypa/manylinux2014_x86_64 \
+          /bin/bash -c "
+            cd /app &&
+            /opt/python/cp310-cp310/bin/pip install --upgrade pip &&
+            /opt/python/cp310-cp310/bin/pip install -r requirements.txt pyinstaller &&
+            echo \"API_KEY=${{ secrets.API_KEY }}\" >> .env &&
+            echo \"API_SECRET=${{ secrets.API_SECRET }}\" >> .env &&
+            echo \"CLOUD_NAME=${{ secrets.CLOUD_NAME }}\" >> .env &&
+            echo \"DB_HOST=${{ secrets.DB_HOST }}\" >> .env &&
+            echo \"DB_NAME=${{ secrets.DB_NAME }}\" >> .env &&
+            echo \"DB_PASSWORD=${{ secrets.DB_PASSWORD }}\" >> .env &&
+            echo \"DB_USER=${{ secrets.DB_USER }}\" >> .env &&
+            echo \"EMAIL_ADDRESS=${{ secrets.EMAIL_ADDRESS }}\" >> .env &&
+            echo \"EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}\" >> .env &&
+            /opt/python/cp310-cp310/bin/pyinstaller --onefile --name myapp --add-data \".env:.env\" main.py &&
+            mkdir -p dist/linux &&
+            mv dist/myapp dist/linux/
+          "
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
           name: myapp-linux
           path: dist/linux/
+
 
   build-macos:
     runs-on: macos-latest
