--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,15 @@ jobs:
       - name: Build inside manylinux2014 container
         run: |
           docker run --rm -v ${{ github.workspace }}:/src -w /src quay.io/pypa/manylinux2014_x86_64 bash -c "
-            # Use preinstalled Python 3.7
+            # Use Python 3.7 inside the container
             /opt/python/cp37-cp37m/bin/pip install --upgrade pip
             /opt/python/cp37-cp37m/bin/pip install pyinstaller -r requirements.txt
 
-            # Create .env file
+            # Verify Python and Pip
+            /opt/python/cp37-cp37m/bin/python --version
+            /opt/python/cp37-cp37m/bin/pip --version
+
+            # Ensure .env exists
             echo 'API_KEY=${{ secrets.API_KEY }}' >> .env
             echo 'API_SECRET=${{ secrets.API_SECRET }}' >> .env
             echo 'CLOUD_NAME=${{ secrets.CLOUD_NAME }}' >> .env
@@ -34,7 +38,10 @@ jobs:
             export PYINSTALLER_NO_LIBPYTHON=1
             /opt/python/cp37-cp37m/bin/python -m PyInstaller --onefile --name myapp --add-data '.env:.env' main.py
 
-            # Move to dist folder
+            # Check if PyInstaller created the binary
+            ls -lah dist/
+
+            # Move binary to organized folder
             mkdir -p dist/linux
             mv dist/myapp dist/linux/
           "
@@ -44,6 +51,7 @@ jobs:
         with:
           name: myapp-linux
           path: dist/linux/
+
 
   build-macos:
     runs-on: macos-latest
