--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Build inside manylinux2014 container
       run: |
-        docker run --rm -v ${{ github.workspace }}:/src -w /src quay.io/pypa/manylinux2014_x86_64 bash -c "
+        docker run --rm -v $PWD:/src -w /src quay.io/pypa/manylinux2014_x86_64:python3.8 bash -c "
           # Upgrade pip
           python3.8 -m pip install --upgrade pip
 
